--- a/Day 1/1. htmlexcercise.html
+++ b/Day 1/1. htmlexcercise.html
@@ -4,54 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>This is a test III Web Design</title>
 
+    <!-- Internal Styles -->
     <style>
-        /* CSS comment */
+        /* This is a CSS Comment */
+        h2 {
+            color: brown;
+            background-color: cyan;
+            font-size: 60px;
+        }
+
+        /* Font size 20px, color: gray; background: mediumspringgreen */
+        /* HEX Code & RGBA */
         p {
             font-size: 20px;
-            /* color: #2c3e50;
-            background-color: #466264d7; */
-            color: rgba(205, 0, 0, 1);
+            color: gray;
+            background-color: rgb(76, 184, 124);
+        }
+        /* Class */
+        .p-one {
+            background-color: gray;
+            color: red;
         }
 
-        .heading-one {
-            color: mediumpurple;
-        }
-
-        .heading-two {
-            color: mediumspringgreen;
+        .p-two {
+            background-color: gray;
+            color: purple;
         }
     </style>
 </head>
 <body>
-    <!-- Heading Tag -->
-    <h1 style="font-size: 50px; color: blue;">This is heading one</h1>
-    <h2 class="heading-one">This is heading two</h2>
-    <h2 class="heading-two">This is another heading</h2>
-    <!-- font size 46px , color orange -->
-    <h3 style="font-size: 46px; color: orange;">This is heading three</h3>
+    <!-- h1 - h6 -->
+    <!-- Inline CSS -->
+    <h1 style="color: red; background-color: yellowgreen;">This is heading one </h1>
 
-    <!-- Paragraph Tag -->
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore consequuntur perferendis sapiente <br/>enim laborum, accusantium repellendus reiciendis quae dolor repudiandae ab modi sit <br/>unde quia nisi voluptatem minus quidem eos?</p>
+    <h2>This is heading two</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis consectetur voluptatum ea repellendus deserunt temporibus error esse, recusandae beatae ut, officiis ex maxime odit doloribus nisi! Omnis, quis repellat? Sit voluptatum voluptate, laudantium ratione molestiae ab cupiditate adipisci sint, doloremque, possimus temporibus veniam. Tempora fugit fuga repellat atque recusandae iusto velit ex excepturi quos perspiciatis cumque iste, ea dignissimos impedit sit culpa, aut, ipsam architecto ab. Velit illum distinctio vero, hic unde explicabo fugit! Iusto, reiciendis. Ipsam aliquid fugiat dolor corporis iste impedit voluptatem quibusdam magni excepturi debitis? Quaerat dignissimos molestiae enim voluptatibus. Vitae, at sapiente. Maxime, quos eum?</p>
+    <!-- p -->
 
-    <!-- Link Tag -->
-    <a href="https://www.google.com" target="_blank">Google</a>
-    <!-- self closing tag -->
-    <br/>
-    <a href="https://www.google.com" target="_blank">Google</a>
+    <p class="p-one">asdfasdf酬載電腦的目的控制和協調科學儀器，監控它們的狀況以及安全。NASA 試圖在 13 日重新啟動酬載電腦但是失敗。</p>
 
-    <!-- Image Tag -->
-    <img src="https://images.pexels.com/photos/374870/pexels-photo-374870.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="city view">
+    <p class="p-two">
+    NASA 表示，初步證據指向記憶體模組損害造成酬載電腦出問題，<br>相關人員試圖轉為備份記憶體模組也行不通。</p>
 
-    <!-- Google map -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14730.744672446843!2d120.28665662619629!3d22.628191604670363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bfdf50729279969!2z5Lit5ZyL5paH5YyW5aSn5a245o6o5buj5pWZ6IKy6YOo6auY6ZuE5YiG6YOo!5e0!3m2!1szh-TW!2stw!4v1620871666633!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <p>this a sentence</p>
+
+    <!-- img -->
+
+    <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="webdesign">
+
+    <!-- Link -->
+
+    <a href="https://www.google.com" target="_blank">Google.com</a>
+    <br>
+    <a href="https://www.yahoo.com.tw">Yahoo.com</a>
+
+    <!-- Google Maps -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14729.334659347356!2d120.31888685466312!3d22.641344912986504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e04c44f69afa1%3A0xb07d3e0f0c90f1ec!2z6YeR5byY56yZ5rG96LuK57K-5ZOB55m-6LKoLeS5neWmguW6lw!5e0!3m2!1szh-TW!2stw!4v1624241818750!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
     <!-- Youtube -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BUYQrkvPcsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/c5GAS_PMXDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
