--- a/Day 1/3. display.html
+++ b/Day 1/3. display.html
@@ -7,12 +7,14 @@
     <title>Document</title>
 
     <style>
+        /* All Selectors */
         /* Reset */
         * {
-            padding: 0;
-            margin: 0;
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
+
 
         h1 {
             margin-bottom: 50px;
@@ -20,24 +22,26 @@
             border: 1px solid gray;
         }
 
+        /* Margin/Padding-top/bottom */
         a {
             display: inline-block;
-            margin-bottom: 100px;
-            margin-top:  100px;
-            padding-left: 20px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            padding-top: 50px;
             margin-left: 30px;
             border: 1px solid gray;
         }
     </style>
 </head>
 <body>
+    <!-- Block, Inline, Inline-block  -->
     <h1>This is h1</h1>
     <h2>This is h2</h2>
-    <h3>this is h3</h3>
+    <h3>This is h3</h3>
 
     <a href="#">Link 1</a>
     <a href="#">Link 2</a>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos iure, quod omnis expedita cupiditate delectus distinctio labore sunt corrupti laboriosam architecto vitae dolore odio placeat optio repellat consequatur modi rerum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, eius porro eum, ipsam totam, voluptates aliquam esse nam asperiores a id magni dolorum quos? Dolore obcaecati distinctio natus temporibus laboriosam sapiente veritatis voluptatem quis, fugiat doloribus praesentium nobis consectetur voluptatibus?</p>
 </body>
 </html>
