--- a/Day 1/2. boxsizing.html
+++ b/Day 1/2. boxsizing.html
@@ -13,21 +13,36 @@
             border: 3px solid blue;
             background-color: pink;
             margin: 30px;
+
+            /* margin-top: 100px;
+            margin-right: 100px;
+            margin-bottom: 100px;
+            margin-left: 100px; */
             padding: 20px;
+
+            /* padding-top: 50px;
+            padding-right: 50px;
+            padding-bottom: 50px;
+            padding-left: 50px; */
         }
 
         .one {
-            box-sizing: border-box;
-        }
-
-        .two {
             box-sizing: content-box;
         }
 
+        .two {
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
+
+    <!-- 346px * 346px -->
+    <!-- Not include padding, border -->
     <div class="one">Box 1</div>
+
+    <!-- 300px * 300px -->
+    <!-- Include padding, border -->
     <div class="two">Box 2</div>
 </body>
 </html>
