--- a/Day 1/4. flexbox.html
+++ b/Day 1/4. flexbox.html
@@ -7,32 +7,31 @@
     <title>Document</title>
 
     <style>
-
         * {
-            padding: 0;
-            margin: 0;
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         .flex {
+            /* 水平排序 */
             display: flex;
-            flex-direction: row;
+            /* flex-direction: row; */
             justify-content: space-between;
-            align-items: center;
+            /* align-items: stretch; */
             flex-wrap: wrap;
         }
 
         .box {
             flex-basis: 300px;
             height: 300px;
-            /* top/bottom 0 left/right 10px */
-            /* margin: 0 10px 0 10px; */
-            margin: 0 10px;
-            background: gray;
+            margin: 0 10px 0 10px;
+            background-color: gray;
         }
 
-        /* .one {
+        .one {
             height: 100px;
+            order: 3;
         }
 
         .two {
@@ -41,8 +40,9 @@
 
         .three {
             height: 200px;
-        } */
+        }
     </style>
+
 </head>
 <body>
     <div class="flex">
