--- a/Day 1/7. button.html
+++ b/Day 1/7. button.html
@@ -13,19 +13,21 @@
             box-sizing: border-box;
         }
 
+        body {
+            padding: 50px;
+        }
+
         .btn {
-            /* DIY */
-            background: #1abc9c;
-            padding: 10px 20px;
-            letter-spacing: 1px;
-            color: #fff;
             display: inline-block;
+            background-color: #4AAF51;
+            color: white;
+            padding: 10px 30px;
             text-decoration: none;
-            transition: all 0.4s;
+            transition: all 0.5s;
         }
 
         .btn:hover {
-            background: #16a085;
+            background-color: #398b3f;
         }
     </style>
 </head>
