--- a/Day 1/6. position.html
+++ b/Day 1/6. position.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 
     <style>
-
         * {
             padding: 0;
             margin: 0;
@@ -21,11 +20,10 @@
         .fixed {
             background-color: hotpink;
             color: #fff;
-            font-size: 20px;
             padding: 20px;
             position: fixed;
-            bottom: 20px;
             right: 20px;
+            bottom: 20px;
         }
 
         .header {
@@ -49,10 +47,12 @@
     <section style="background: mediumaquamarine;"></section>
     <section style="background: grey;"></section> -->
 
+    <!-- Child Component Position based on Parent -->
+    <!-- Vertical & Horizontal Center -->
     <div class="header">
         <div class="text-container">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, expedita.</p>
+            <h1>Lorem ipsum dolor sit.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quaerat?</p>
         </div>
     </div>
 </body>
