--- a/Day 1/8. card.html
+++ b/Day 1/8. card.html
@@ -12,10 +12,14 @@
             margin: 0;
             box-sizing: border-box;
         }
-        
+
         html {
             font-family: Arial, Helvetica, sans-serif;
             color: #2c3e50;
+        }
+
+        body {
+            padding: 50px;
         }
 
         img {
@@ -23,23 +27,19 @@
             width: 100%;
         }
 
-        body {
-            padding: 50px;
-        }
-
         .card {
             width: 300px;
-            box-shadow: 0px 0px 20px 0px rgba(171,171,171,1);
-        }
-
-        .card-content {
-            padding: 10px;
+            /* border: 1px solid #ccc; */
+            box-shadow: 0px 6px 15px 0px rgba(153,153,153,1);
         }
 
         h3 {
             margin-bottom: 15px;
         }
 
+        .card-content {
+            padding: 15px;
+        }
     </style>
 </head>
 <body>
@@ -47,7 +47,7 @@
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="">
         <div class="card-content">
             <h3>John Doe</h3>
-            <p>Lorem, ipsum dolor.</p>
+            <p>Lorem ipsum dolor sit.</p>
         </div>
     </div>
 </body>
