--- a/Day 1/9. blog.html
+++ b/Day 1/9. blog.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 
     <style>
-        /* Reset */
         * {
-            margin: 0;
             padding: 0;
+            margin: 0;
             box-sizing: border-box;
         }
 
@@ -19,29 +18,24 @@
             color: #2c3e50;
         }
 
-        img {
-            display: block;
-            width: 100%;
-        }
-
         a {
             text-decoration: none;
-            color: #40739e;
+            color: #2173c5;
         }
 
         .container {
             width: 760px;
             margin: 0 auto;
+            padding: 50px 0;
         }
-        
+
         h1 {
             margin-bottom: 0.5rem;
         }
 
         .info {
-            margin-bottom: 1rem;
-            font-size: 0.8rem;
-            color: #ccc;
+            margin-bottom: 2rem;
+            color: #7b95af;
         }
 
         p, img {
@@ -52,32 +46,33 @@
             line-height: 1.5;
         }
 
-        span {
-            font-weight: 700;
-            /* text-transform: uppercase; */
-            border-bottom: 1px solid #40739e;
+        img {
+            display: block;
+            width: 100%;
         }
 
-        .flex {
-            /* display: flex;
-            justify-content: center; */
-            text-align: center;
+        span {
+            color: #2980b9;
+            font-weight: 700;
+            font-size: 1.1rem;
+            border-bottom: 2px solid #2980b9;
+            /* text-transform: capitalize; */
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>We are excited to learn CSS</h1>
-        <div class="info">5.20.2021</div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi incidunt quod sint minus impedit aspernatur voluptates dolorum recusandae. <span>Commodi molestiae molestias facilis nostrum</span> inventore excepturi illo officia doloribus sint sapiente obcaecati facere voluptatibus, provident perferendis dolores est temporibus, atque suscipit cum pariatur expedita. Iusto amet error nihil corrupti commodi quisquam voluptates laudantium nulla fugiat illo itaque officiis, quidem incidunt dignissimos aperiam facere quae libero voluptatibus? Ut, sed necessitatibus ea ipsam praesentium enim non reprehenderit eligendi, vitae quisquam laboriosam aliquid distinctio?</p>
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <div class="info">6.21.2021</div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum libero ipsum tenetur, culpa ducimus dolor suscipit sapiente vero nihil deserunt velit eaque laboriosam <span> quos natus possimus </span>temporibus fugit! Laudantium, perferendis totam? Hic minima veritatis magnam repellendus fugiat optio eos sunt.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum libero ipsum tenetur, culpa ducimus dolor suscipit sapiente vero nihil deserunt velit eaque laboriosam <span>quos natus possimus temporibus </span>fugit! Laudantium, perferendis totam? Hic minima veritatis magnam repellendus fugiat optio eos sunt.</p>
 
         <img src="https://images.pexels.com/photos/9708/food-pizza-restaurant-eating.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi incidunt quod sint minus impedit aspernatur voluptates dolorum recusandae. Commodi molestiae molestias facilis nostrum inventore excepturi illo officia doloribus sint sapiente obcaecati facere voluptatibus, provident perferendis dolores est temporibus, atque suscipit cum pariatur expedita. Iusto amet error nihil corrupti commodi quisquam voluptates laudantium nulla fugiat illo itaque officiis, quidem incidunt dignissimos aperiam facere quae libero voluptatibus? Ut, sed necessitatibus ea ipsam praesentium enim non reprehenderit eligendi, vitae quisquam laboriosam aliquid distinctio?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum libero ipsum tenetur, culpa ducimus dolor suscipit sapiente vero nihil deserunt velit eaque laboriosam quos natus possimus temporibus fugit! Laudantium, perferendis totam? Hic minima veritatis magnam repellendus fugiat optio eos sunt.</p>
 
-        <div class="flex">
-            <a href="#">&#8592; Previous Post</a> | <a href="#">Next Post &#8594;</a>
-        </div>
+        <a href="#">&#8592; Previous Post</a> | <a href="#">Next Post &#8594;</a>
     </div>
 </body>
 </html>
