--- a/Day 2/7. features.html
+++ b/Day 2/7. features.html
@@ -7,72 +7,73 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./grid.css">
     <link rel="stylesheet" href="./util.css">
+    <link rel="stylesheet" href="./grid.css">
 
     <style>
-        .features img {
-            width: 70px;
-        }
-
-        .features span {
-            font-weight: 700;
+        .lg-icon {
+            width: 80px;
         }
 
         .features-block {
-            background-color: coral;
             padding: 0.5rem;
             border-radius: 5px;
         }
 
-        .purple {
+        .bg-coral {
+            background-color: coral;
+        }
+
+        .bg-purple {
             background-color: purple;
         }
 
-        .gray {
+        .bg-gray {
             background-color: gray;
+        }
+
+        .bg-cyan {
+            background-color: cyan;
         }
     </style>
 </head>
 <body>
-    <section class="pt-4 pb-4 features">
+    <section class="pt-5 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="d-flex justify-content-center">
-                        <div class="features-block">
-                            <img src="./coding.png" alt="">
+                    <div class="d-flex justify-content-center mb-2">
+                        <div class="features-block bg-coral">
+                            <img src="./coding.png" alt="" class="lg-icon">
                         </div>
                     </div>
-                    <p class="mt-3"><span>Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Nesciunt, et veniam aliquam in nam quasi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat soluta ipsam quis id eum fuga?</p>
+                </div>
+                <div class="col-md-3">
+                    <div class="d-flex justify-content-center mb-2">
+                        <div class="features-block bg-purple">
+                            <img src="./coding.png" alt="" class="lg-icon">
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat soluta ipsam quis id eum fuga?</p>
+                </div>
+                <div class="col-md-3">
+                    <div class="d-flex justify-content-center mb-2">
+                        <div class="features-block bg-gray">
+                            <img src="./coding.png" alt="" class="lg-icon">
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat soluta ipsam quis id eum fuga?</p>
+                </div>
+                <div class="col-md-3">
+                    <div class="d-flex justify-content-center mb-2">
+                        <div class="features-block bg-cyan">
+                            <img src="./coding.png" alt="" class="lg-icon">
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat soluta ipsam quis id eum fuga?</p>
                 </div>
 
-                <div class="col-md-3">
-                    <div class="d-flex justify-content-center">
-                        <div class="features-block purple">
-                            <img src="./coding.png" alt="">
-                        </div>
-                    </div>
-                    <p class="mt-3"><span>Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Nesciunt, et veniam aliquam in nam quasi.</p>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="d-flex justify-content-center">
-                        <div class="features-block gray">
-                            <img src="./coding.png" alt="">
-                        </div>
-                    </div>
-                    <p class="mt-3"><span>Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Nesciunt, et veniam aliquam in nam quasi.</p>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="d-flex justify-content-center">
-                        <div class="features-block">
-                            <img src="./coding.png" alt="">
-                        </div>
-                    </div>
-                    <p class="mt-3"><span>Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Nesciunt, et veniam aliquam in nam quasi.</p>
-                </div>
             </div>
         </div>
     </section>
