--- a/Day 2/1. card-final.html
+++ b/Day 2/1. card-final.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./util.css">
+
     <style>
         * {
             padding: 0;
@@ -33,14 +35,6 @@
             box-shadow: 0px 6px 15px 0px rgba(153,153,153,1);
         }
 
-        .card h3 {
-            margin-bottom: 15px;
-        }
-
-        .card p {
-            margin-bottom: 15px;
-        }
-
         .card-content {
             padding: 15px;
         }
@@ -50,13 +44,10 @@
     <div class="card">
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="">
         <div class="card-content">
-            <h3>John Doe</h3>
-            <p>Lorem ipsum dolor sit.</p>
+            <h3 class="mb-2">John Doe</h3>
+            <p class="mb-2">Lorem ipsum dolor sit.</p>
         </div>
     </div>
 
-
-    <h3>Lorem, ipsum dolor.</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, sint!</p>
 </body>
 </html>
