--- a/Day 2/10. about.html
+++ b/Day 2/10. about.html
@@ -11,22 +11,23 @@
     <link rel="stylesheet" href="./util.css">
 
     <style>
-        .max-w-680 { max-width: 680px;}
-
         .about p {
             line-height: 1.5;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
+            font-weight: 300;
+        }
+
+        .max-w-680 {
+            max-width: 680px;
         }
     </style>
-
 </head>
 <body>
-    <section class="pb-4 pt-4 about">
+    <section class="pb-5 pt-5 about">
         <div class="container max-w-680">
             <h2 class="text-center mb-4">About Us</h2>
-            <p class="mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed soluta impedit dolorem fugit explicabo. Quam quas quis, dolorum, corrupti quibusdam, quae quo recusandae praesentium repellendus delectus officiis aliquam. Dolorem similique ea eveniet ducimus iusto nesciunt perferendis temporibus facere! </p>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi illum iure laborum asperiores sequi pariatur. Placeat est in laudantium consectetur tempora maxime rem, blanditiis nostrum cupiditate autem voluptatum natus voluptatibus illum labore. Temporibus, accusamus! Accusamus vel placeat quod, ut perferendis possimus</p>
+            <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat praesentium et eaque, optio porro sint saepe illum ea sunt mollitia atque molestias in perspiciatis odio. Veniam velit labore aspernatur. Aut, debitis nam reiciendis vitae quisquam soluta sed officiis dolorum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque placeat praesentium et eaque, optio porro sint saepe illum ea sunt mollitia atque molestias in perspiciatis odio. Veniam velit labore aspernatur. Aut, debitis nam reiciendis vitae quisquam soluta sed officiis dolorum.</p>
         </div>
     </section>
 </body>
