--- a/Day 2/11. process.html
+++ b/Day 2/11. process.html
@@ -11,28 +11,23 @@
     <link rel="stylesheet" href="./util.css">
 
     <style>
-        .process p {
-            line-height: 1.5;
-            font-size: 1.1rem;
-        }
-    </style>
 
+    </style>
 </head>
 <body>
     <section class="process">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8">
-
-                    <img src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                    <img src="https://images.pexels.com/photos/39284/macbook-apple-imac-computer-39284.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" class="h-100">
                 </div>
 
-                <div class="col-md-4 pb-4 pt-4 ">
-                    <h2 class="mb-2">Web Design Service</h2>
+                <div class="col-md-4 pb-4 pt-4">
+                    <h2 class="mb-2">Lorem, ipsum dolor.</h2>
 
-                    <p class="mb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet necessitatibus quisquam fuga, cum libero suscipit voluptates reiciendis delectus dignissimos accusamus </p>
+                    <p class="mb-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi ipsam nesciunt provident aperiam a voluptatum labore placeat ex. Eveniet, quidem.</p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet necessitatibus quisquam fuga, cum libero suscipit voluptates reiciendis delectus dignissimos accusamus placeat unde assumenda molestias ex ipsum exercitationem sapiente </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quia quidem fuga accusantium, obcaecati nostrum a? Praesentium, dignissimos et! Dicta.</p>
                 </div>
             </div>
         </div>
