--- a/Day 2/12. header.html
+++ b/Day 2/12. header.html
@@ -13,14 +13,17 @@
     <style>
 
         header {
-            /* background-image: url("https://images.pexels.com/photos/69432/pexels-photo-69432.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"); */
-            /* background-size: cover;
+            height: 600px;
+            /* background-color: gray; */
+            /* background-image: url("https://images.pexels.com/photos/265667/pexels-photo-265667.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center; */
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://images.pexels.com/photos/69432/pexels-photo-69432.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat center/cover;
-            height: 600px;
-            position: relative;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.pexels.com/photos/265667/pexels-photo-265667.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center/cover;
+
             color: #fff;
+            position: relative;
+
         }
 
         .text-container {
@@ -29,8 +32,8 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-
     </style>
+
 </head>
 <body>
     <header>
