--- a/Day 2/3. grid.html
+++ b/Day 2/3. grid.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./util.css">
+    <link rel="stylesheet" href="./grid.css">
     <style>
         * {
             margin: 0;
@@ -17,98 +20,95 @@
             background-color: brown;
             height: 80px;
         }
-    </style>
 
-    <link rel="stylesheet" href="./util.css">
-    <link rel="stylesheet" href="./grid.css">
+    </style>
 </head>
+
 <body>
+    <!-- 2 column  -->
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="box"></div>
             </div>
+
             <div class="col-md-6 mt-sm-2">
                 <div class="box"></div>
             </div>
         </div>
+    </div>
 
-
-        <div class="row mt-2">
+    <div class="mt-2"></div>
+    <!-- 3 column -->
+    <div class="container">
+        <div class="row">
             <div class="col-md-4">
                 <div class="box"></div>
             </div>
+
             <div class="col-md-4 mt-sm-2">
                 <div class="box"></div>
             </div>
+
             <div class="col-md-4 mt-sm-2">
-                <div class="box"></div>
-            </div>
-        </div>
-
-        <!-- 4 col
-        1. col each col-md-x 
-         Total: 12
-         12/4 = 3 
-         col-md-3
-        2. calculate each col-md-x width
-        -->
-
-        <div class="row mt-2">
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-        </div>
-
-
-        <!-- 2 col
-        col-md-9 / col-md-3
-        -->
-        <div class="row mt-2">
-            <!-- DIY -->
-            <div class="col-md-9">
-                <div class="box"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-        </div>
-
-        <!-- 8 col / 4 col -->
-        <div class="row mt-2">
-            <div class="col-md-8">
-                <div class="box"></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="box"></div>
-            </div>
-        </div>
-
-
-        <!-- 6col / 3col /3col -->
-        <div class="row mt-2">
-            <div class="col-md-6">
-                <div class="box"></div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="box"></div>
-            </div>
-
-            <div class="col-md-3">
                 <div class="box"></div>
             </div>
         </div>
     </div>
+
+    <div class="mt-2"></div>
+
+    <!-- Four column -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="box"></div>
+            </div>
+            <div class="col-md-3 mt-sm-2">
+                <div class="box"></div>
+            </div>
+            <div class="col-md-3 mt-sm-2">
+                <div class="box"></div>
+            </div>
+            <div class="col-md-3 mt-sm-2">
+                <div class="box"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="mt-2"></div>
+    <!-- col-md-9 / col-md-3 -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="box"></div>
+            </div>
+
+            <div class="col-md-3 mt-sm-2">
+                <div class="box"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mt-2"></div>
+
+    <!-- col-md-8 / col-md-4 -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="box"></div>
+            </div>
+
+            <div class="col-md-4 mt-sm-2">
+                <div class="box"></div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
