--- a/Day 2/8. form.html
+++ b/Day 2/8. form.html
@@ -7,133 +7,74 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./grid.css">
     <link rel="stylesheet" href="./util.css">
+    <link rel="stylesheet" href="./grid.css">
 
     <style>
+        .max-550 {
+            width: 550px;
+            margin: 0 auto;
+        }
 
-        .form-group { margin-bottom: 1.5rem; }
-
-        .form-group label {
+        .form-label {
             display: inline-block;
             margin-bottom: 0.5rem;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
         }
 
         .form-control {
             display: block;
-            width: 100%;
             padding: 0.5rem 0.25rem;
-            border: 1px solid #ccc;
+            width: 100%;
             border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        textarea {
+            height: 200px
         }
 
         textarea:focus, input:focus {
             outline: none;
         }
 
-        textarea {
-            height: 200px;
-        }
-
         .btn {
-            /* DIY */
-            background: #1abc9c;
-            padding: 10px 20px;
-            letter-spacing: 1px;
-            color: #fff;
             display: inline-block;
+            background-color: #4AAF51;
+            color: white;
+            padding: 10px 30px;
             text-decoration: none;
-            transition: all 0.4s;
-            border:none;
+            transition: all 0.5s;
+            border: none;
         }
 
         .btn:hover {
-            background: #16a085;
+            background-color: #398b3f;
         }
-
-
     </style>
-
 </head>
+
 <body>
-    <section class="pb-4 pt-4">
-        <div class="container max-w-550">
-            <h2 class="text-center mb-1">Contact Us</h2>
-            <p class="text-center mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ipsum.</p>
-            <form>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label>First Name</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label>Company</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label>Message</label>
-                            <textarea class="form-control"></textarea>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <button class="btn">Submit!</button>
-                </div>
-
-            </form>
-        </div>
-    </section>
-    <!-- <form>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" placeholder="please enter your name...">
-        </div>
-
-        <div class="form-group">
-            <label for="name">Email</label>
-            <input id="name" type="email" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="message">Message</label>
-            <textarea name="message" class="form-control" placeholder="please enter your name..."></textarea>
-        </div>
-        <button class="btn">Submit</button>
-    </form> -->
+    <div class="max-550">
+        <form>
+            <div class="mb-3">
+                <label for="name" class="form-label">Name:</label>
+                <input id="name" type="text" class="form-control" placeholder="Your Name..." required>
+            </div>
+            <div class="mb-3">
+                <label for="name" class="form-label">Email:</label>
+                <input id="name" type="email" class="form-control" placeholder="Your Name..." required>
+            </div>
+            <div class="mb-3">
+                <label for="name" class="form-label">Number:</label>
+                <input id="name" type="number" class="form-control" placeholder="Your Name..." required>
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea id="message" class="form-control" placeholder="Message..."></textarea>
+            </div>
+            <button class="btn w-100">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
