--- a/Day 2/9. navbar.html
+++ b/Day 2/9. navbar.html
@@ -13,18 +13,15 @@
     <style>
 
         nav {
-            box-shadow: 0px 0px 10px -3px rgba(87,87,87,0.7);
-            font-size: 1.1rem;
+            box-shadow: 0px 3px 10px -3px rgb(177, 177, 177);
         }
-
         nav ul {
             display: flex;
             list-style: none;
         }
 
-        nav p {
-            font-size: 1.2rem;
-            font-weight: 700;
+        nav a {
+            color: #2c3e50;
         }
 
         nav li {
@@ -39,34 +36,30 @@
             width: 40px;
         }
 
+        .menu {
+            display: none;
+        }
+
         .bar {
+            width: 25px;
             height: 2px;
             background: #2c3e50;
-            width: 25px;
             margin-bottom: 6px;
         }
 
-        .menu { display: none; }
-
-        .phone-btn { display: none; }
-
         @media only screen and (max-width: 576px) {
-            .menu { display: block; }
-
-            .phone-btn {
-                display: inline-block;
-                padding: 0.5rem 1rem;
-                border: 2px solid #2c3e50;
-                color: #2c3e50;
-            }
-
             nav ul {
                 display: none;
                 flex-direction: column;
                 width: 100%;
             }
 
+            .menu {
+                display: block;
+            }
+
             nav li {
+                text-align: center;
                 margin-right: 0;
                 margin-bottom: 1rem;
             }
@@ -78,25 +71,25 @@
     </style>
 </head>
 <body>
-    <nav class="pt-1 pb-1">
-        <div class="container">
-            <div class="row">
-                <!-- Left Col -->
-                <a href="#" class="d-flex items-center mr-auto">
-                    <img src="./coding.png" alt="" class="logo-img mr-1">
-                    <p>Big Boy Inc.</p>
-                </a>
 
-                <a href="tel:0988111222" class="phone-btn mr-1">Call Me</a>
+    <!-- Desktop -->
+    <nav class="pt-2 pb-2">
+        <div class="container">
+            <div class="row justify-content-between items-center">
+                <div class="d-flex items-center">
+                    <img src="./coding.png" alt="" class="logo-img mr-1">
+                    Big Boy Inc.
+                </div>
+
                 <!-- Hamburger Menu -->
-                <div class="menu pt-1">
+                <div class="menu">
                     <div class="bar"></div>
                     <div class="bar"></div>
                     <div class="bar"></div>
                 </div>
 
-                <!-- Right Col -->
-                <ul class="items-center">
+                <!-- Nav List -->
+                <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Products</a></li>
@@ -112,10 +105,10 @@
         var navList = document.querySelector("nav ul");
 
         menu.addEventListener('click', function() {
-            if(navList.style.display === "none") {
-                navList.style.display = "flex";
+            if (navList.style.display === "none") {
+                navList.style.display = "flex"
             } else {
-                navList.style.display = "none";
+                navList.style.display = "none"
             }
         })
     </script>
